--- a/source/_posts/荆棘谷的青山.md
+++ b/source/_posts/荆棘谷的青山.md
@@ -10,7 +10,7 @@ categories: 生活
 
 - 博客的念头由来已久，但又久未实行．总在挑什么语言，选什么框架，却忘了博客应该做什么．仔细想想，抛开技术因素，内容才是博客价值所在．
 
-- 博文会以技术为主，原创为主，希望能做到少而精，能有些意义．就像荆棘谷里的那个知名任务，一片片零散的残章断卷后，讲述了一个美妙的故事．
+- 博文会以技术为主，原创为主，也许会偶尔有感而发，写点风马牛不想及的想法，权且一乐。希望能做到少而精，能有些意义．就像荆棘谷里的那个知名任务，一片片零散的残章断卷后，讲述了一个美妙的故事．
 
 - 正值毕业季，可惜这次我是一个孤独的旁观者，只能贪婪的呼吸一下弥漫在空气之中的喜悦．前路漫漫，希望能从这篇博文开始，认真的做点事情.
   
