--- a/source/_posts/简谈贝叶斯决策.md
+++ b/source/_posts/简谈贝叶斯决策.md
@@ -14,7 +14,7 @@ mathjax: true
 写一写学习贝叶斯方法中的几点理解，一个简单脉络而已，方便回顾，与大家分享。
 
 -------------------
-##1. 先验概率与后验概率
+##先验概率与后验概率
 两个概念：
 - `先验概率`： 事情还没有发生，要求这件事情发生的可能性的大小。如P(A).
 - `后验概率`： 事情已经发生，要求这件事情发生的原因`是由某个因素引起的`可能性的大小，是后验概率. 
@@ -22,7 +22,7 @@ mathjax: true
 所以我们可以使用贝叶斯公式求后验概率，进而达到分类的目的。
 
 
-##2. 贝叶斯公式
+##贝叶斯公式
 
 $$ P(F\_j|E)= \dfrac{P(F\_jE)}{P(E)} =  \dfrac{P(E|F\_j)P(F\_j)}{ \displaystyle{\sum_{i=1}^{n} }P(E|F\_i)P(F\_i) } $$
 
@@ -35,7 +35,7 @@ $$ P(F\_j|E)= \dfrac{P(F\_jE)}{P(E)} =  \dfrac{P(E|F\_j)P(F\_j)}{ \displaystyle{
 
 
 
-##3. 例子
+##例子
 看过很多讲解贝叶斯公式的例子，下面这个很好:
 > 一份信件等可能的在存在三个不同的文件夹中的任意一个。假设信件实际在文件夹$i$中$(i = 1,2,3)$而你经过对文件夹$i$的快速翻阅发现信件的概率记为$a\_i$，问题是，假定你查看了文件夹1且没有发现此信，问信件在文件夹1中的概率是多少？
                                                               ——[《应用随机过程：概率模型导论》](http://book.douban.com/subject/2309401/)
@@ -48,7 +48,7 @@ $$	P(F\_1|E)=  \dfrac{P(E|F\_1)P(F\_1)}{ \displaystyle{\sum\_{i=1}^{3} }P(E|F\_i
 	- 对整体事件空间(分母)的划分
 
 
-##4. 一种简单实现：朴素贝叶斯
+##简单实现：朴素贝叶斯
 贝叶斯思想只是一个框架，可结合许多假设与分布。
 朴素思分类就是一个通过先验概率求后验概率的方法，然后将实例点分到后验概率最大的类。就像街上有一个黑人，我们预测黑人来自非洲，为什么呢？因为黑人中非洲人的比率最高。
 ####朴素贝叶斯的核心假设：
@@ -58,8 +58,7 @@ $$P(x|y\_i)P(y\_i)=P(a\_1|y\_i)P(a\_2|y\_i)...P(a\_m|y\_i)P(y\_i)=P(y\_i)\prod^m
 	
 2. 每个特征同等重要。
 
-
-##5. 分类准则
+##分类准则
 
 将输入向量分到后验概率最大的类，这就是`分类准则`。贝叶斯使用的是`最大后验概率准则`。
 在别的分类方法中，我们还用过`最小错误率`的分类准则，比如基于0-1损失的最小错误率，这两者是一样的。
