--- a/source/_posts/逻辑回归与计算中的向量化思想.md
+++ b/source/_posts/逻辑回归与计算中的向量化思想.md
@@ -211,7 +211,7 @@ x_1^{(m)}e_1,x_2^{(m)}e_2+...+x_n^{(m)}e_n
 - 看完我们会发现，逻辑回归也是基于简单的线性分类思想，只不过逻辑回归通过一个契合线性分类的sigmoid函数，将数据到分界限的距离巧妙地投影到了0-1区间，进而可以将距离转化为概率，通过最大斯然估计求解。
 - 向量化的思想其实充斥着机器学习的各个角落。就像MIT线性代数公开课中说的，矩阵并不是生来存在的，而是人们后天发明用来方便计算的产物。将数据向量化，通过矩阵运算求解，是解决问题的必经之路。
 ---
-这次公式比较多，处理markdown语法和$\mathrm{\LaTeX}$的冲突時花了不少时间，不过也因此找到一个好方法，不用修改node.js的配置就可以处理好语法冲突，只需要在```公式的前后用raw标签注释就可以了```，原理应该是通过标签屏蔽了markdown语法的解释器，前端不是很懂，不过很有效哦～
+这次公式比较多，处理markdown语法和$\mathrm{\LaTeX}$的冲突時花了不少时间，不过也因此找到一个好方法，不用修改node.js的配置就可以处理好语法冲突，只需要在```公式的前后用raw标签注释就可以了```，原理应该是通过标签屏蔽了markdown语法的解释器，前端不是很懂，不过很有效～
 
 
 
