befor transfer to coding 20160317

--- a/source/_posts/从相机投影模型谈谈矩阵组成.md
+++ b/source/_posts/从相机投影模型谈谈矩阵组成.md
@@ -7,8 +7,8 @@ categories:
 - 理论
 mathjax: true
 ---
-内容属于计算机视觉知识体系。部分插图选自IACAS讲义课件。
-##引子
+部分插图来自自动化所CV讲义课件。
+##1. 引子
 这里主要从相机成像的过程入手，解析相机将**三维世界中的真实物体转换成照片底片上的二维图像**的具体过程，重点是坐标系的转换，同时对投影矩阵进行拆解，以更好的理解矩阵的意义。
 ###依赖知识
 这些和主题并无太大关系，但有必要稍加解释和记录。
@@ -22,6 +22,10 @@ mathjax: true
 - 单位像素长宽：
 ####其他相机属性：
 - 景深：
-- 视角：
+- 视角：与焦距f和胶片尺寸d有关。公式：
 ####小孔成像模型：
 小孔成像原理小时的自然课就曾接触过，这里主要讲一下
+
+##2. 相机投影模型
+###相机几何
+###未写完
