--- a/source/_posts/逻辑回归与计算中的向量化思想.md
+++ b/source/_posts/逻辑回归与计算中的向量化思想.md
@@ -49,11 +49,11 @@ P(y=0|x,\theta) & = 1-h\_\theta(x)
 \end{aligned}
 \end{equation\*}
 
-- 2、通过最大斯然估计求发生概率，同时可构造损失函数：
+- 2、通过最大斯然估计求发生概率，单个样本发生的概率为：
 $$
 P(y|x,\theta)=(h\_{\theta}(x))^y(1-h\_{\theta}(x))^{1-y}
 $$
-取似然函数：
+最大似然估计，让所有样本的发生概率最大化，取似然函数：
 {% raw %}
 $$
 L(\theta)  = \prod_{i=1}^nP(y_i|x_i,\theta) = \prod_{i=1}^n (h_{\theta}(x_i))^{y_i}(1-h_{\theta}(x_i))^{1-y_i}
